--- a/index.html
+++ b/index.html
@@ -23,7 +23,69 @@
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
-
     </header>
+    <main>
+        <!--  Герой -->
+        <section>
+            <h1>Эффективные решения <br> для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
+        </section>
+        <!-- Особенности компании -->
+        <section>
+            <h2>Наши особенности</h2>
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
+        <!-- Направления работы -->
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li><img src="./images/tablet.jpg" alt="разработка схемы"></li>
+                <li><img src="./images/phone.jpg" alt="разработка мобильной версии"></li>
+                <li><img src="./images/colours.jpg" alt="подбор цветовой гаммы"></li>
+            </ul>
+        </section>
+        <!-- Наша команда -->
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./images/productdesigner.jpg" alt="Игорь Демьяненко">
+                    <h3>Игорь Демьяненко</h3>
+                    <p lang="en">Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/developer.jpg" alt="Ольга Репина">
+                    <h3>Ольга Репина</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li><img src="./images/marketing.jpg" alt="Николай Тарасов">
+                    <h3>Николай Тарасов</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/uidesigner.jpg" alt="Михаил Ермаков">
+                    <h3>Михаил Ермаков</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
