--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="./images/tablet.jpg" alt="разработка схемы"></li>
-                <li><img src="./images/phone.jpg" alt="разработка мобильной версии"></li>
-                <li><img src="./images/colours.jpg" alt="подбор цветовой гаммы"></li>
+                <li><img src="./images/tablet.jpg" alt="разработка схемы" width="370"></li>
+                <li><img src="./images/phone.jpg" alt="разработка мобильной версии" width="370"></li>
+                <li><img src="./images/colours.jpg" alt="подбор цветовой гаммы" width="370"></li>
             </ul>
         </section>
         <!-- Наша команда -->
@@ -66,26 +66,35 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/productdesigner.jpg" alt="Игорь Демьяненко">
+                    <img src="./images/productdesigner.jpg" alt="Игорь Демьяненко" width="270">
                     <h3>Игорь Демьяненко</h3>
                     <p lang="en">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/developer.jpg" alt="Ольга Репина">
+                    <img src="./images/developer.jpg" alt="Ольга Репина" width="270">
                     <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <p lang="en">Frontend Developer</p>
                 </li>
-                <li><img src="./images/marketing.jpg" alt="Николай Тарасов">
+                <li><img src="./images/marketing.jpg" alt="Николай Тарасов" width="270">
                     <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <p lang="en">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/uidesigner.jpg" alt="Михаил Ермаков">
+                    <img src="./images/uidesigner.jpg" alt="Михаил Ермаков" width="270">
                     <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <p lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
+    <!-- Подвал -->
+    <footer>
+        <a href="/" lang="en">WebStudio</a>
+        <address>г. Киев, пр-т Леси Украинки, 26</address>
+        <ul>
+            <li><a href="mailto:info@example.com">info@example.com</a></li>
+            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
