--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Шапка -->
     <header>
         <nav>
-            <a href="/" lang="en">WebStudio</a>
+            <a href="index.html" lang="en">WebStudio</a>
 
             <ul>
                 <li><a href="">Студия</a></li>
@@ -89,7 +89,7 @@
     </main>
     <!-- Подвал -->
     <footer>
-        <a href="/" lang="en">WebStudio</a>
+        <a href="index.html" lang="en">WebStudio</a>
         <address>г. Киев, пр-т Леси Украинки, 26</address>
         <ul>
             <li><a href="mailto:info@example.com">info@example.com</a></li>
